--- a/client/Index.html
+++ b/client/Index.html
@@ -22,17 +22,7 @@
     </div>
     <div class="container">
         <h3>Проекты</h3>
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>Название</th>
-                    <th>Описание</th>
-                    <th>Участники</th>
-                    <th>Статус</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true"> </div>
     </div>
 </body>
 
