--- a/index.html
+++ b/index.html
@@ -5,21 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>KirillV</title>
-    <link href="build/bundle.css" rel="stylesheet">
-    <script type="text/javascript" src="build/bundle.js"></script>
-    <link rel="icon" href="favicon.png" />
+    <link href="bundle.css" rel="stylesheet">
+    <script type="text/javascript" src="bundle.js"></script>
+    <link rel="icon" href="favicon.ico" />
 </head>
 
 <body>
-    <div class="loader-conteiner">
-        <div id="loader" class="loader">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
     <div class="container">
         <h3>Проекты</h3>
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true"> </div>
